Translating and adapting

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,8 @@
       <header>
         <h1>Easy 6502</h1>
         <p><em>by</em> <a href="https://twitter.com/skilldrick">Nick Morgan</a></p>
-        <p class="view"><a href="https://github.com/skilldrick/easy6502/tree/gh-pages">Fork me on GitHub</a></p>
+        <p><em>and by</em> <a href="http://www.cortassa.net">Diego Cortassa</a></p>
+        <p class="view"><a href="https://github.com/diegocortassa/easy6502">Fork me on GitHub</a></p>
         <ul>
           <li><a href="#intro">Introduction</a></li>
           <li><a href="#first-program">Our first program</a></li>
