--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,18 +20,18 @@
       <header>
         <h1>Easy 6502</h1>
         <p><em>by</em> <a href="https://twitter.com/skilldrick">Nick Morgan</a></p>
-        <p><em>and by</em> <a href="http://www.cortassa.net">Diego Cortassa</a></p>
+        <p><em>and</em> <a href="http://www.cortassa.net">Diego Cortassa</a></p>
         <p class="view"><a href="https://github.com/diegocortassa/easy6502">Fork me on GitHub</a></p>
         <ul>
-          <li><a href="#intro">Introduction</a></li>
-          <li><a href="#first-program">Our first program</a></li>
-          <li><a href="#registers">Registers and flags</a></li>
-          <li><a href="#instructions">Instructions</a></li>
+          <li><a href="#intro">Introduzione</a></li>
+          <li><a href="#first-program">Il primo programma</a></li>
+          <li><a href="#registers">Registri e flag</a></li>
+          <li><a href="#instructions">Istruzioni</a></li>
           <li><a href="#branching">Branching</a></li>
-          <li><a href="#addressing">Addressing modes</a></li>
-          <li><a href="#stack">The stack</a></li>
+          <li><a href="#stack">Lo stack</a></li>
           <li><a href="#jumping">Jumping</a></li>
-          <li><a href="#snake">Creating a game</a></li>
+          <li><a href="#constants">Costanti (o simboli)</a></li>
+          <li><a href="#snake">Snake</a></li>
         </ul>
       </header>
       <section>
