--- a/_layouts/basic.html
+++ b/_layouts/basic.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Easy 6502 by skilldrick</title>
+    <title>Easy 6502</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="simulator/style.css">
